--- a/samples/demos/AndroidManifest.xml
+++ b/samples/demos/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.bossturbo.webviewmarker.sample.demos" android:versionCode="1" android:versionName="1.0" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.bossturban.webviewmarker.sample.demos" android:versionCode="1" android:versionName="1.0" >
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17" />
     <application
         android:icon="@drawable/ic_launcher"
